--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/image.webp" type="image/x-icon">
-    <title>Employee Management System</title>
+    <title>Employee Management Syste</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
